[UPDATE] Refactorizar controladores, application services y DTOs para multi-institución
Controladores: nuevos endpoints de muestras (asignar/liberar posición, alícuotas,
eliminar con guards), traslados (préstamos, devoluciones, cancelación), estudios de
muestra. Application services: inyectar InstitucionContextService en todas las capas.
DTOs: agregar campos de institución en mappers y responses. EstudioMuestraMapper:
incluir parámetros en response para edición. Auditoría: soporte multi-tenant.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>